tests/sema/fail/v41_fail_unit_sum_match_binding.ep
# COMPILE_FAIL_CONTAINS: match on unit sum State requires namespaced variant cases without bindings
type State = Ready | Done

fun main(): void {
    let state = State.Ready
    match state {
        Ready value: { ret }
        Done value: { ret }
    }
}
